/mine and /stake work to mine and to stake; some weird new CSS bug prevetns admin panel div from using space and prevents overflow:auto scroll bars from showing up :/

--- a/app/src/components/modalView.css
+++ b/app/src/components/modalView.css
@@ -132,6 +132,10 @@
   text-align: center;
 }
 
+.modal-form-text__on-light-bg {
+  font-weight: 500;
+  color: #acf;
+}
 
 
 .toast-enter {
